// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentLabelContainer renders React element label 1`] = `
<DocumentFragment>
  <div
    class="segment-label-container"
  >
    <span
      class="segment-label"
    >
      <span>
        bar
      </span>
    </span>
    <span
      class="segment-width"
    >
      <span>
        0.3 m
      </span>
    </span>
    <span
      class="segment-grid units-metric"
    />
  </div>
</DocumentFragment>
`;

exports[`SegmentLabelContainer renders correct grid styling in imperial 1`] = `
<DocumentFragment>
  <div
    class="segment-label-container"
  >
    <span
      class="segment-label"
    >
      foo
    </span>
    <span
      class="segment-width"
    >
      <span>
        1′
      </span>
    </span>
    <span
      class="segment-grid units-imperial"
    />
  </div>
</DocumentFragment>
`;

exports[`SegmentLabelContainer renders correct grid styling in metric 1`] = `
<DocumentFragment>
  <div
    class="segment-label-container"
  >
    <span
      class="segment-label"
    >
      foo
    </span>
    <span
      class="segment-width"
    >
      <span>
        0.3 m
      </span>
    </span>
    <span
      class="segment-grid units-metric"
    />
  </div>
</DocumentFragment>
`;

exports[`SegmentLabelContainer renders editable label 1`] = `
<DocumentFragment>
  <div
    class="segment-label-container"
  >
    <span
      class="segment-label"
    >
      foo
    </span>
    <span
      class="segment-width"
    >
      <span>
        0.3 m
      </span>
    </span>
    <span
      class="segment-grid units-metric"
    />
  </div>
</DocumentFragment>
`;

exports[`SegmentLabelContainer renders string label 1`] = `
<DocumentFragment>
  <div
    class="segment-label-container"
  >
    <span
      class="segment-label"
    >
      bar
    </span>
    <span
      class="segment-width"
    >
      <span>
        0.3 m
      </span>
    </span>
    <span
      class="segment-grid units-metric"
    />
  </div>
</DocumentFragment>
`;
